# wowengine-full

./: .gitignore
hyperweb2/mysqltools/: .gitignore
trinitycore/modules/dep/: CMakeLists.txt
trinitycore/modules/dep/bzip2/: CMakeLists.txt
trinitycore/modules/dep/g3dlite/: CMakeLists.txt
trinitycore/modules/dep/gsoap/: CMakeLists.txt
trinitycore/modules/dep/jemalloc/: CMakeLists.txt
trinitycore/modules/dep/recastnavigation/Detour/: CMakeLists.txt
trinitycore/modules/dep/recastnavigation/Recast/: CMakeLists.txt
trinitycore/modules/dep/zlib/: CMakeLists.txt
trinitycore/src/project/: CMakeLists.txt  coreProj.cpp  coreProj.h  defines.cmake
trinitycore/src/project/cmake/: options.cmake  showoptions.cmake
trinitycore/src/project/cmake/compiler/clang/: settings.cmake
trinitycore/src/project/cmake/compiler/gcc/: settings.cmake
trinitycore/src/project/cmake/compiler/mingw/: settings.cmake
trinitycore/src/project/cmake/compiler/msvc/: settings.cmake
trinitycore/src/project/cmake/macros/: CheckPlatform.cmake  ConfigureBoost.cmake  FindBoost.cmake  FindGit.cmake  FindMySQL.cmake  FindPCHSupport.cmake  FindReadline.cmake  Utils.cmake
trinitycore/src/project/cmake/platform/: settings.cmake
trinitycore/src/project/cmake/platform/unix/: settings.cmake
trinitycore/src/project/cmake/platform/win/: settings.cmake
trinitycore/src/project/genrev/: CMakeLists.txt
worldengine/modules/contrib/: upt.json
wowengine/data/database/sql/3.3.5a/: .gitignore  LICENSE  README.md  db-tools.js  mysql-config.json.dist
wowengine/data/database/sql/3.3.5a/create/: create-mysql.sql  drop-mysql.sql
wowengine/data/database/sql/3.3.5a/databases/auth/: account.sql  account_access.sql  rbac_account_permissions.sql  rbac_default_permissions.sql  rbac_linked_permissions.sql  rbac_permissions.sql  realmlist.sql  version.sql
wowengine/data/database/sql/3.3.5a/databases/chars/: account_tutorial.sql  addons.sql  arena_team_member.sql  channels.sql  character_arena_stats.sql  character_battleground_data.sql  character_instance.sql  character_queststatus_rewarded.sql  character_spell.sql  character_spell_cooldown.sql  character_talent.sql  characters.sql  gm_surveys.sql  gm_tickets.sql  group_instance.sql  groups.sql  item_loot_items.sql  item_loot_money.sql  pool_quest_save.sql  pvpstats_players.sql  version.sql  worldstates.sql
wowengine/data/database/sql/3.3.5a/databases/world/: access_requirement.sql  achievement_criteria_data.sql  achievement_reward.sql  areatrigger_involvedrelation.sql  areatrigger_scripts.sql  areatrigger_tavern.sql  areatrigger_teleport.sql  battleground_template.sql  battlemaster_entry.sql  command.sql  conditions.sql  creature_addon.sql  creature_classlevelstats.sql  creature_equip_template.sql  creature_formations.sql  creature_model_info.sql  creature_onkill_reputation.sql  creature_questender.sql  creature_queststarter.sql  creature_summon_groups.sql  creature_template_addon.sql  creature_text.sql  disables.sql  event_scripts.sql  fishing_loot_template.sql  game_event.sql  game_event_battleground_holiday.sql  game_event_creature.sql  game_event_creature_quest.sql  game_event_gameobject.sql  game_event_model_equip.sql  game_tele.sql  gameobject_loot_template.sql  gameobject_questender.sql  gameobject_queststarter.sql  gameobject_template.sql  gossip_menu.sql  gossip_menu_option.sql  instance_encounters.sql  instance_template.sql  (+66 more)
wowengine/data/database/sql/3.3.5a/updates/auth/: rev_1.sql  rev_2.sql
wowengine/data/database/sql/3.3.5a/updates/chars/: rev_1.sql
wowengine/data/database/sql/3.3.5a/updates/world/: rev_1.sql  rev_2.sql
wowengine/data/resources/docs/: upt.json
wowengine/modules/: .gitignore  upt.json
wowengine/modules/dep/: CMakeLists.txt
wowengine/modules/dep/libmpq/: CMakeLists.txt
wowengine/src/game/3.3.5a/: .gitignore  CMakeLists.txt  README.md  upt.json
wowengine/src/game/3.3.5a/mods/: CMakeLists.txt  ModsLoader.h.dist
wowengine/src/game/3.3.5a/scripts/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Commands/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/EasternKingdoms/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Events/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Kalimdor/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Northrend/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/OutdoorPvP/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Outland/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Pet/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/Spells/: CMakeLists.txt
wowengine/src/game/3.3.5a/scripts/World/: CMakeLists.txt
wowengine/src/game/3.3.5a/server/: CMakeLists.txt
wowengine/src/game/3.3.5a/server/authserver/: CMakeLists.txt
wowengine/src/game/3.3.5a/server/worldserver/: CMakeLists.txt
wowengine/src/game/3.3.5a/server/worldserver/PrecompiledHeaders/: worldserverPCH.cpp
wowengine/src/game/3.3.5a/tool/map_extractor/: CMakeLists.txt
wowengine/src/game/3.3.5a/tool/mesh_extractor/: CMakeLists.txt
wowengine/src/game/3.3.5a/tool/mmaps_generator/: CMakeLists.txt
wowengine/src/game/3.3.5a/tool/vmap4_assembler/: CMakeLists.txt
wowengine/src/game/3.3.5a/tool/vmap4_extractor/: CMakeLists.txt
wowengine/src/game/3.3.5a/world/: CMakeLists.txt
wowengine/src/game/3.3.5a/world/DataStores/: DBCStores.h
wowengine/src/game/3.3.5a/world/Scripting/: ScriptLoader.cpp  ScriptMgr.cpp
wowengine/src/game/mods/: .gitignore  CMakeLists.txt  ModsLoader.h.dist  README
wowengine/src/project/: CMakeLists.txt
